--- a/style.css
+++ b/style.css
@@ -1,4 +1,4 @@
-/*
+ /*
 COLORS:
 
 Light green: #7ed56f
@@ -63,8 +63,9 @@ body {
     font-size: 60px;
     font-weight: 400;
     letter-spacing: 35px;
+    
     animation-name: moveInLeft;
-    animation-duration: 5s;
+    animation-duration: 3s;
 }
 
 .heading-primary-sub {
@@ -72,8 +73,9 @@ body {
     font-size: 20px;
     font-weight: 700;
     letter-spacing: 17.4px;
+    
     animation-name: moveInRight;
-    animation-duration: 5s;
+    animation-duration: 3s;
 }
 
 @keyframes moveInLeft {
@@ -98,4 +100,19 @@ body {
         opacity: 1;
         transform: translate(0);
     }
+}
+
+/* Buttons */
+
+.btn:link,
+.btn:visited {
+    text-transform: uppercase;
+    text-decoration: none;
+    padding: 15px 40px;
+    
+}
+
+.btn-white {
+    background-color: #fff;
+    color: #777;
 }
